# Django-Learning-Projects

Blog-site/: Readme.md  db.sqlite3  manage.py  pyproject.toml
Blog-site/BlogSite/: settings.py  urls.py
Blog-site/blog/: admin.py  feeds.py  models.py  urls.py  views.py
Blog-site/blog/migrations/: 0001_initial.py  0002_alter_post_author.py  0003_post_tags.py  0004_comment.py
Blog-site/blog/templates/blog/: base.html
Blog-site/blog/templates/blog/post/: detail.html  latest_posts.html  list.html  pagination.html  share.html  tagged_posts.html
Blog-site/blog/templatetags/: blog_tags.py
