[tool.poetry]
name = "blog-site"
version = "0.1.0"
description = ""
authors = ["AlphaDarkmoon"]
license = "open"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.1.1"
pytz = "^2024.2"
python-decouple = "^3.8"
django-taggit = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
